Fix chartjs show on mobile.

--- a/app/assets/stylesheets/styles-custom.scss
+++ b/app/assets/stylesheets/styles-custom.scss
@@ -19,3 +19,12 @@
     height: auto;
   }
 }
+
+
+@media only screen and (max-width: 512px) {
+  .event-collection {
+    .graph-box {
+      padding: 0;
+    }
+  }
+}
